Release Notes

* 3/26/2015
  * changed insertFiles to fill nEvents for input
  * changed AtlasPJB to add criteria=+-tag

* 3/24/2015
  * changed JG to serizlize threads
  * changed latestDBR to use DBR with one or more replicas

* 3/23/2015
  * set the upper limit on wallTime from scout job data

* 3/20/2015
  * changed AtlasAJB for release check
  * changed AtlasTS to always register user datasets

* 3/19/2015
  * changed AtlasTR to set transient metadata

* 3/18/2015
  * changed AtlasPP to set transient metadata

* 3/17/2015
  * fixed getSiteStorageEndpointMap for NL
  * fixed JG to use currentPriority instead of currentPriority

* 3/12/2015
  * changed not to update contents when task is pending

* 3/11/2015
  * added cap in AtlasPJB
  * added invalid character check in dataset name

* 3/10/2015
  * added lockProcess
  * changed queue lengh to 450*4
  * changed chunk size per site to 25

* 3/6/2015
  * introduced manyAssigned in AtlasPJB

* 3/3/2015
  * changed AtlasPJB to send logging info to the logger
  * changed AtlasPJB to assign highPrio/scouts to home+foreign T1

* 2/26/2015
  * changed AtlasPJB to check free disksize with rucio
  * fixed truncation error when throttling tasks
  * fixed prepareTasks for early avalanche

* 2/23/2015
  * added noThrottle
  * added partialFinish
  * using AVG for throttle

* 2/18/2015
  * added disableReassign
  * fixed AtlasPJT when high prio tasks are waiting

* 2/13/2015
  * changed AtlasPJB to send scouts to sites associated to T1 SE
  * changed reacivatePendingTasks to finish tasks when they have some finished files 
  * changed CF to allow 200k files

* 2/11/2015
  * changed AtlasPJB to include nDefined in nQueued
  * added bulkSendMsg to MsgWrapper
  * changed AtlasAJB to send brokerage logs
  * removed setReplicaMetaDataAttribute from AtlasTS
  * added soft finish
  * fixed insertFiles to take largeness of nEventsPerFile into account

* 2/10/2015
  * modified MW to escape <>